--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,7 +9,8 @@ nav.encabezado {
   align-items: center; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: Black; }
 
 /* TIOGRAFIA */
 h1 {
@@ -39,6 +40,16 @@ h3 {
   color: #FFA800;
   baseline: -3px; }
 
+h4 {
+  font-family: "Montserrat";
+  letter-spacing: 3px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 2rem;
+  color: white;
+  baseline: -3px;
+  text-decoration: none; }
+
 p {
   font-family: "roboto";
   text-align: center;
@@ -46,6 +57,35 @@ p {
   line-height: 2;
   margin-left: 20%;
   margin-right: 20%; }
+
+.textoMediano {
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  font-size: 18px;
+  color: Black;
+  text-decoration: none; }
+
+.tipoNegra {
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-size: 15px;
+  color: Black;
+  padding-top: 1rem;
+  padding-bottom: 1rem; }
+
+.tipoBlanca {
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-size: 15px;
+  color: White;
+  padding-top: 1rem;
+  padding-bottom: 1rem; }
 
 hr {
   color: #F2640E !important;
@@ -79,6 +119,17 @@ li {
 
 ul li:hover ul {
   display: block; }
+
+/*div.container-fluid {
+ margin-right: 15rem;
+ margin-left: 15rem; 
+ margin-top: 1rem;
+}*/
+.justify-content-end {
+  padding-right: 15%; }
+
+a.navbar-brand {
+  margin-left: 15%; }
 
 /* IMAGENES */
 img.imagenApertura {
@@ -135,8 +186,18 @@ textarea {
 value {
   border: none; }
 
-div.container-fluid {
-  margin-top: 1rem;
-  margin-right: 15rem;
-  margin-left: 15rem; 
-}
+.fondoFooter {
+  background-color: #F2640E !important;
+  height: 95px;
+  text-align: center; }
+
+.d-flex {
+  padding-left: 15%; }
+
+.figure {
+  padding-left: 5px;
+  padding-right: 5px;
+  font-family: 'Montserrat', sans-serif; }
+
+.elemento {
+  text-align: center; }
