--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -16,6 +16,7 @@ nav.encabezado{
 
 a{
 		text-decoration: none;
+		color: Black;
 		
 	}	
 
@@ -51,7 +52,18 @@ h3{
 	text-transform: uppercase;
 	font-size: 18px;
 	color: #FFA800;
+	baseline:-3px;
+}
+
+h4{
+	font-family: "Montserrat";
+	letter-spacing: 3px;
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 2rem;
+	color: white;
 	baseline: -3px;
+	text-decoration: none;
 }
 
 p{
@@ -61,6 +73,40 @@ p{
 	line-height: 2;
 	margin-left: 20%;
 	margin-right: 20%
+}
+
+.textoMediano {
+	text-align: center;
+  	font-family:'Montserrat', sans-serif;
+  	letter-spacing: 3px;
+  	text-transform: uppercase;
+  	font-size: 18px;
+  	color: Black;
+  	text-decoration: none;
+  
+}
+
+
+.tipoNegra{
+	font-family: 'Montserrat', sans-serif;
+ 	text-align: center;
+ 	letter-spacing: 2px;
+  	text-transform: uppercase;
+  	font-size: 15px;
+  	color: Black;
+  	padding-top: 1rem;
+  	padding-bottom: 1rem;
+}
+
+.tipoBlanca{
+	font-family: 'Montserrat', sans-serif;
+ 	text-align: center;
+ 	letter-spacing: 2px;
+  	text-transform: uppercase;
+  	font-size: 15px;
+  	color: White;
+  	padding-top: 1rem;
+  	padding-bottom: 1rem;
 }
 
 hr{
@@ -106,8 +152,20 @@ ul li:hover ul{
 	display:block;
 }
 
+/*div.container-fluid {
+ margin-right: 15rem;
+ margin-left: 15rem; 
+ margin-top: 1rem;
+}*/
+
+.justify-content-end{
+	padding-right: 15%;
+}
 
 
+a.navbar-brand{
+	margin-left: 15%;
+}
 /* IMAGENES */
 
 img.imagenApertura{
@@ -180,12 +238,26 @@ value{
 	border:none;
 }
 
+.fondoFooter{
+	background-color:$naranjaDark;
+	height:95px; 
+	text-align: center;
 
-
-
-nav.div.container-fluid{
-
-	margin-right: 111px;
-	margin-left: 111px;
-	
 }
+
+.d-flex{
+	padding-left: 15%;
+}
+
+.figure{
+	padding-left: 5px;
+	padding-right: 5px;
+	font-family: 'Montserrat', sans-serif;
+}
+
+.elemento{
+	text-align: center;
+}
+
+
+
