cambio nombre mat

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -198,7 +198,7 @@ div.tamanios {
   padding-right: 15px; }
 
 .boxColorido {
-  background-image: url("../img/contactoMats.jpg");
+  background-image: url("../img/contactoMat.jpg");
   border: none;
   width: 50%;
   color: white;
