--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -264,7 +264,7 @@ div.tamanios{
 }
 
 .boxColorido{
-	background-image: url("../img/contactoMats.jpg");
+	background-image: url("../img/contactoMat.jpg");
 	border: none;
 	width: 50%;
 	color: white;
